--- a/css/styles.css
+++ b/css/styles.css
@@ -1,90 +1,132 @@
+/* Variables globales */
 :root {
-    --color1: #040404;
-    --color2: #8A3F7F;
-    --color3: #F4F4F4;
+    --color1: #ffffff;
+    --color2: #212121;
+    --color3: #FFC107;
+    --color4: #0097A7;
+    --color5: #757575;
+    --color6: #DFE9F3;
 }
+/* stablecen un tamaño de fuente base para facilitar el uso de unidades rem */
+html {
+    font-size: 62.5%;
+    box-sizing: border-box; /* Hack para Box Model */
+    scroll-snap-type: y mandatory;
+}
+/*  utiliza para definir el estilo visual del cuerpo del documento,
+    incluyendo el tamaño y tipo de fuente, así como un fondo degradado
+    que cambia de color de abajo hacia arriba. */
 body {
-    background-color: var(--color1);
-    margin: 0;
-    padding: 20px;
+    font-size: 1rem;
+    font-family: "Pangolin", cursive;
+    background-image: linear-gradient(to top, var(--color6) 0%, var(--color1) 100% );
 }
-header,legend {
-    font-family: "Silkscreen", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    border-radius: 20px;
+/* asegura que todos los elementos tengan un comportamiento uniforme. */
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+/* Le da formato a la tiqueta a */
+header a{
+    text-align: center;
+    color: var(--color2);
+    text-decoration: none; /* Quita lo subrallado */
+    font-size: 2rem;
+    font-weight: 700; /* Para que el texto sea más grueso. */
+}
+/* Cambia de color de letra y fondo al momento de pasar el cursor */
+header a:hover{
     color: var(--color3);
 }
-
-header {
-    background: linear-gradient(45deg, #0290ff, #37ae5f);
-    text-align: center;
-    font-size: 2.5em;
+/* Navegacion Principal */
+/*  Le da color al fondo */
+.subtitulo {
+    background-color: var(--color4);
 }
-
-fieldset {
-    text-align: left;
-    margin: 20px 0;
-    background: var(--color3);
-    border-radius: 25px;
+/* se alineen en el centro de la vista y que
+    el desplazamiento se detenga en ellos de manera consistente.*/
+.navegador {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
-
-legend {
-    font-size: 2em;
-    background: linear-gradient(45deg, #52b3ff, #64ce87);
-    padding: 15px 25px;
-}
-
-#historia {}
-
-#niñez {}
-
-#adolencia {}
-
-#personal {}
-
-#academico {}
-
-#metas {}
-
-#patologias {}
-
-#deportes section{
+/*  facilita la alineación y distribución vertical de esos elementos. */
+.navegador {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
-#deportes ul{
-    font-size: 150%;
+/*  Define estilos que sólo se aplican cuando la ventana
+    tiene un ancho mínimo de 768 píxeles. */
+@media (min-width: 768px) {
+    .navegador {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
-#deportes li{
+/* Le da formato a la tiqueta a */
+.navegador a {
+    display: block;
+    text-align: center;
     color: var(--color1);
-    font-family: "Pangolin", cursive;
-    font-weight: 400;
-    font-style: normal;
+    text-decoration: none; /* Quita lo subrallado */
+    font-size: 2rem;
+    font-weight: 700; /* Para que el texto sea más grueso. */
+    padding: 1rem;
+}
+/* Cambia de color de letra y fondo al momento de pasar el cursor */
+.navegador a:hover {
+    background-color: var(--color3);
+    color: var(--color2);
 }
 
-#loquemegusta {}
-
-#loquenomegusta{}
-
-#admision {}
-
-.Fotos_y_videos {
+/* contenido */
+/*  define un contenedor que tiene un ancho máximo de 1200px
+    y que está centrado horizontalmente en la página */
+.contenedor {
+    max-width: 120rem;
+    margin: 0 auto;
+}
+/* Crea una sombra un relleno interno generoso y esquinas redondeadas */
+.sombra {
+    box-shadow: 0 5px 15px 0 rgba(112,112,112,0.48);
+    background-color: var(--color1);
+    padding: 2rem;
+    border-radius: 1rem;
+}
+main legend{
+    font-size: 3rem;
+    font-weight: 700;
+    color: var(--color2);
+    text-align: center;
+}
+/*  Fotos y videos  */
+/*  Crea una cuadricula para los campos en su interior. */
+.Fotos_y_videos{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Crea un grid responsivo */
-    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    /*
+        repeat(auto-fill,...) = Crea tantas columnas como quepan en el contenedor.
+        minmax(150px, 1fr) =    Significa que cada columna tendrá un tamaño mínimo de 150 píxeles,
+                                las columnas se ajusten dinámicamente al ancho del contenedor.
+     */
+    gap: 10px; /* Establece un espacio entre filas y columnas de la cuadrícula. */
 }
-
 img, video{
     width: 100%;
     height: auto    ;
     border-radius: 8px;
 }
-
+/* Cambia de tamaño al momento de pasar el cursor */
 img:hover {
     transform: scale(200%);
 }
-
 video:hover {
     transform: scale(200%);
+}
+/* Footer */
+/* Alinea el texto en el centro */
+.footer {
+    text-align: center;
+}
+/* Le da tamaño a al etiqueta p */
+.footer p {
+    font-size: 1.5rem;
 }
