--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
-/* Variables globales */
+/* Variables globales para todos los archivos*/
 :root {
-    --color1: #ffffff;
+    --color1: #f0f0f0;
     --color2: #212121;
     --color3: #FFC107;
     --color4: #0097A7;
     --color5: #757575;
     --color6: #DFE9F3;
+    --color7: #FFA500;
+    --color8: #4CAF50;
+    --color9: #26A69A;
 }
 /* stablecen un tamaño de fuente base para facilitar el uso de unidades rem */
 html {
@@ -17,21 +20,23 @@ html {
     incluyendo el tamaño y tipo de fuente, así como un fondo degradado
     que cambia de color de abajo hacia arriba. */
 body {
-    font-size: 1rem;
+    font-size: 2rem;
     font-family: "Pangolin", cursive;
-    background-image: linear-gradient(to top, var(--color6) 0%, var(--color1) 100% );
+    background: linear-gradient(to top, var(--color6) 0%, var(--color1) 100% );
 }
 /* asegura que todos los elementos tengan un comportamiento uniforme. */
 *, *:before, *:after {
     box-sizing: inherit;
 }
 /* Le da formato a la tiqueta a */
-header a{
+header a, header p{
+    display: block;
     text-align: center;
     color: var(--color2);
     text-decoration: none; /* Quita lo subrallado */
-    font-size: 2rem;
+    font-size: 4rem;
     font-weight: 700; /* Para que el texto sea más grueso. */
+    padding: 1rem;
 }
 /* Cambia de color de letra y fondo al momento de pasar el cursor */
 header a:hover{
@@ -42,12 +47,7 @@ header a:hover{
 .subtitulo {
     background-color: var(--color4);
 }
-/* se alineen en el centro de la vista y que
-    el desplazamiento se detenga en ellos de manera consistente.*/
-.navegador {
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
-}
+
 /*  facilita la alineación y distribución vertical de esos elementos. */
 .navegador {
     display: flex;
@@ -76,7 +76,6 @@ header a:hover{
     background-color: var(--color3);
     color: var(--color2);
 }
-
 /* contenido */
 /*  define un contenedor que tiene un ancho máximo de 1200px
     y que está centrado horizontalmente en la página */
@@ -90,12 +89,6 @@ header a:hover{
     background-color: var(--color1);
     padding: 2rem;
     border-radius: 1rem;
-}
-main legend{
-    font-size: 3rem;
-    font-weight: 700;
-    color: var(--color2);
-    text-align: center;
 }
 /*  Fotos y videos  */
 /*  Crea una cuadricula para los campos en su interior. */
