--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Variables globales para todos los archivos */
 :root {
-    --color1: #f0f0f0; /* Color de fondo claro */
+    --color1: #ededed; /* Color de fondo claro */
     --color2: #212121; /* Color de texto oscuro */
     --color3: #FFC107; /* Color amarillo */
     --color4: #0097A7; /* Color azul oscuro */
