--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,11 @@ main p{
 main span{
     color: var(--color7);
 }
+a{
+    color: var(--color7); /* Color de texto para enlaces */
+    text-decoration: none; /* Elimina el subrayado */
+    font-size: 4rem; /* Tamaño de fuente grande */
+}
+a:hover {
+    color: var(--color8);
+}
